// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldText 1`] = `
.c2 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <input
    className="c2"
    id="thumbs-up"
    name="thumbsUp"
    type="text"
  />
</div>
`;

exports[`A FieldText with an error validation aligned to the bottom 1`] = `
.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  background-color: #FFF2F4;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c3 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      This is an error
    </div>
    <input
      className="c4"
      id="thumbs-up"
      name="thumbsUp"
      type="text"
    />
  </div>
</div>
`;
